# ChangeLog for sci-mathematics/rkward
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sci-mathematics/cvs-repo/gentoo-x86/sci-mathematics/rkward/ChangeLog,v 1.27 2011/02/23 14:45:26 tampakrap Exp $

  23 Feb 2011; Theo Chatzimichos <tampakrap@gentoo.org> rkward-0.5.4.ebuild:
  cleanup, slotmove to 4

  14 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org> -rkward-0.5.1.ebuild,
  -rkward-0.5.2.ebuild, rkward-0.5.4.ebuild:
  Stabilise latest drop older.

*rkward-0.5.4 (22 Dec 2010)

  22 Dec 2010; Sébastien Fabbro <bicatali@gentoo.org> -rkward-0.5.3.ebuild,
  +rkward-0.5.4.ebuild:
  Bump

  09 Aug 2010; Tomáš Chvátal <scarabeus@gentoo.org> rkward-0.5.1.ebuild,
  rkward-0.5.2.ebuild:
  Drop useless kde_minimal definition.

  01 Jul 2010; Markos Chandras <hwoarang@gentoo.org> rkward-0.5.3.ebuild:
  Stable on amd64 wrt bug #326047

  01 Jul 2010; Christian Faulhammer <fauli@gentoo.org> rkward-0.5.3.ebuild:
  stable x86, bug 326047

*rkward-0.5.3 (04 May 2010)

  04 May 2010; Sébastien Fabbro <bicatali@gentoo.org> +rkward-0.5.3.ebuild:
  Version bump

*rkward-0.5.2 (04 Nov 2009)

  04 Nov 2009; Sébastien Fabbro <bicatali@gentoo.org> +rkward-0.5.2.ebuild:
  Version bump

  30 Oct 2009; Markus Meier <maekke@gentoo.org> rkward-0.5.1.ebuild:
  amd64/x86 stable, bug #290804

*rkward-0.5.1 (07 Aug 2009)

  07 Aug 2009; Sébastien Fabbro <bicatali@gentoo.org> +rkward-0.5.1.ebuild:
  Version bump

*rkward-0.5.0d (18 Jun 2009)
*rkward-0.4.9b (18 Jun 2009)

  18 Jun 2009; Sébastien Fabbro <bicatali@gentoo.org>
  +rkward-0.4.9b.ebuild, -rkward-0.5.0c.ebuild, +rkward-0.5.0d.ebuild:
  Version bumps and fixes, thanks to Michel Lang, bug #269940.

*rkward-0.5.0c (01 Apr 2009)

  01 Apr 2009; Sébastien Fabbro <bicatali@gentoo.org>
  -rkward-0.5.0b.ebuild, +rkward-0.5.0c.ebuild:
  Version bump and set all to SLOT=0  with blockers because of collisions.
  Thanks Michel Lang for his work, closing bug #264334.
