@@ -1,4 +1,6 @@
 DIST rkward-0.5.4.tar.gz 1185270 RMD160 b7eb1621451f138d0e539e6e159160881b7b0a90 SHA1 6129132ac09a506c21a7f6fab7e249d509a30a0a SHA256 d324b7992c997d75d393b1bf4be79ee9f28ae46582ed2c7bfef839064c08162b
+DIST rkward-0.5.5.tar.gz 1221637 RMD160 23cac75e8803ddbc382d97a7fd169611891f603d SHA1 77baa1b0e8e9c44c621dee2ccde97471c10714d6 SHA256 7e9e5368a71ed45ea8fa8057151fa5b0632bdf0e16953a4b36cacfea4c71dee7
 EBUILD rkward-0.5.4.ebuild 659 RMD160 3b1658532114f6e9da13404f923eb3e24caf2686 SHA1 77170c31eef0781647c8356e378310c181a05f13 SHA256 9869290ae83ead30dbe2eadb1c1ca875dfd6c8e925c7a7fac2392064f2a19ed9
-MISC ChangeLog 4331 RMD160 6660655593321d6c6c7a18ba3c5de354ab521288 SHA1 0ddd4948205c19852ada58f43295d32a3c2b31ff SHA256 8b7b553d1405c6268ca990e4163b786f96c2c022f415d5854461a88481dc1890
+EBUILD rkward-0.5.5.ebuild 757 RMD160 5830bc8065b10ec0eb50c85066d47b9e7dc79281 SHA1 fd6f0b5784eee8d4053647b051ff678e36e711ae SHA256 9d5ac10f0b5c293f61e91843fa20f7d83de2b12b58ae795f5477b419d5c5d451
+MISC ChangeLog 4499 RMD160 d75c2cb0f80c8d584aac469e29bce10a449508a7 SHA1 fe664f7a52d9c29dc0bcb5ff665d9a363da0a706 SHA256 c3bf065db4b27790d46a35c35f8ef979436a17245a243993238e9bda4bc74dde
 MISC metadata.xml 403 RMD160 f10e8b77a455809d2e221f136bdbfec565d0c8e8 SHA1 7a5b826b7938ae37b6c3545ea97bec239aae16b5 SHA256 840a30b774c00d0e7b34fd56a9f8eab3a1698b598f42aa13f1cc401400624120
